// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helpers should handle an undefined http status: 0 message 1`] = `"ERROR"`;

exports[`Helpers should handle an undefined http status: undefined message 1`] = `"ERROR"`;

exports[`Helpers should handle basic object updates: setPropIfDefined 1`] = `
Object {
  "lorem": "ipsum",
}
`;

exports[`Helpers should handle basic object updates: setPropIfDefined undefined 1`] = `Object {}`;

exports[`Helpers should handle basic object updates: setPropIfTruthy bool 1`] = `
Object {
  "lorem": true,
}
`;

exports[`Helpers should handle basic object updates: setPropIfTruthy number 1`] = `Object {}`;

exports[`Helpers should handle basic object updates: setPropIfTruthy string 1`] = `
Object {
  "lorem": true,
}
`;

exports[`Helpers should handle http status 400 level error messages from response: 400 error message 1`] = `"Lorem ipsum dolor sit"`;

exports[`Helpers should handle http status 400 level error messages from response: 400 fallback again error message 1`] = `"Request failed with status code XXX"`;

exports[`Helpers should handle http status 400 level error messages from response: 400 fallback error message 1`] = `"{\\"ipsum\\":{\\"sed\\":\\"nulla sed consequat urna\\",\\"dolor\\":{\\"sit\\":\\"sit dolor\\\\nconsequat urna\\",\\"placerat\\":\\"\\"}}}"`;

exports[`Helpers should handle http status 400 level error messages from response: 400 fallback yet again error message 1`] = `"XXX Request failed"`;

exports[`Helpers should handle http status 400 level error messages from response: 400 filtered message 1`] = `"Lorem ipsum dolor sit"`;

exports[`Helpers should handle http status 400 level error messages from response: 400 filtered object message 1`] = `"{\\"sit\\":[\\"sit dolor\\",\\"consequat urna\\"],\\"placerat\\":[{\\"ante\\":\\"sed placerat ante\\"}]"`;

exports[`Helpers should handle http status 500 level error messages from response: 500 level error message 1`] = `"500 Lorem ipsum dolor sit"`;

exports[`Helpers should handle http status 500 level error messages from response: 500 level fallback again error message 1`] = `"500 Request failed with status code XXX"`;

exports[`Helpers should handle http status 500 level error messages from response: 500 level fallback error message 1`] = `"500 "`;

exports[`Helpers should handle http status 500 level error messages from response: 500 level fallback yet again error message 1`] = `"500 XXX Request failed"`;

exports[`Helpers should handle http status less than 400 message from response: 200 message 1`] = `"Request success XXX"`;

exports[`Helpers should handle http status less than 400 message from response: 399 message 1`] = `"Request success XXX"`;

exports[`Helpers should handle http status less than 400 message from response: 400 message 1`] = `"Request success XXX"`;

exports[`Helpers should handle use aggregate error, or fallback: emulated aggregate error 1`] = `
Object {
  "aggregated": [AggregateError: testing aggregated],
  "errors": Array [
    [Error: lorem ipsum],
    [Error: dolor sit],
  ],
  "isEmulated": true,
  "name": "AggregateError",
}
`;

exports[`Helpers should handle view related selectors and props updates: createViewQueryObject 1`] = `
Object {
  "page": 1,
  "page_size": 10,
}
`;

exports[`Helpers should have specific functions: helpers 1`] = `
Object {
  "DEV_MODE": false,
  "POLL_INTERVAL": 120000,
  "PROD_MODE": false,
  "TEST_MODE": true,
  "TOAST_NOTIFICATIONS_TIMEOUT": 8000,
  "UI_BRAND": false,
  "UI_NAME": "Quipucords",
  "UI_SENTENCE_START_NAME": "The Quipucords tool",
  "UI_SHORT_NAME": "Quipucords",
  "UI_VERSION": "0.0.0.0000000",
  "aggregatedError": [Function],
  "copyClipboard": [Function],
  "createViewQueryObject": [Function],
  "devModeNormalizeCount": [Function],
  "downloadData": [Function],
  "generateId": [Function],
  "getCurrentDate": [Function],
  "getMessageFromResults": [Function],
  "getStatusFromResults": [Function],
  "getTimeDisplayHowLongAgo": [Function],
  "getTimeStampFromResults": [Function],
  "ipAddressValue": [Function],
  "isIpAddress": [Function],
  "noop": [Function],
  "noopPromise": Promise {},
  "noopTranslate": [Function],
  "setPropIfDefined": [Function],
  "setPropIfTruthy": [Function],
}
`;

exports[`Helpers should return a predictable current date: current date 1`] = `
Object {
  "currentDate": 2022-06-01T00:00:00.000Z,
}
`;

exports[`Helpers should support displaying the ui version: ui version 1`] = `"0.0.0.0000000"`;
